<resources>
    <string name="app_name">Sport News App</string>
    <string name="google_login">Sign in with Google</string>
    <string name="web_application_client_id">213872277246-c1qkcl38qnsjtbon04ftifroh73btotu.apps.googleusercontent.com</string>
    <string name="title_activity_homepage">MainActivity</string>
    <string name="title_formulaone">Formula 1</string>
    <string name="title_tennis">Tennis</string>
    <string name="title_cycling">Cycling</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_share">Share</string>
    <string name="search_hint">Search here</string>
    <string name="load_more">More</string>
    <string name="open_browser">Open in browser</string>
    <string name="send">Send to</string>
    <string name="delete">Delete</string>
    <string name="logout">Sign out</string>
    <string name="revoke">Delete account</string>
</resources>