<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_formulaone"
        android:icon="@drawable/formulaone_selector"
        android:title="@string/title_formulaone" />

    <item
        android:id="@+id/navigation_tennis"
        android:icon="@drawable/tennis_selector"
        android:title="@string/title_tennis" />

    <item
        android:id="@+id/navigation_cycling"
        android:icon="@drawable/cycling_selector"
        android:title="@string/title_cycling" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorites_selector"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/share_selector"
        android:title="@string/title_share" />
</menu>