<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_favorites">

    <fragment
        android:id="@+id/navigation_formulaone"
        android:name="it.sapienza.sportnewsapp.ui.formulaone.FormulaOneFragment"
        android:label="@string/title_formulaone"
        tools:layout="@layout/fragment_formulaone" />

    <fragment
        android:id="@+id/navigation_tennis"
        android:name="it.sapienza.sportnewsapp.ui.tennis.TennisFragment"
        android:label="@string/title_tennis"
        tools:layout="@layout/fragment_tennis" />

    <fragment
        android:id="@+id/navigation_cycling"
        android:name="it.sapienza.sportnewsapp.ui.cycling.CyclingFragment"
        android:label="@string/title_cycling"
        tools:layout="@layout/fragment_cycling" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="it.sapienza.sportnewsapp.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_share"
        android:name="it.sapienza.sportnewsapp.ui.share.ShareFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_share" />
</navigation>